# b_encontrar_todas_as_nfes_do_cte

./: .gitignore  Cargo.toml  README.md  cte_nfes.txt
src/: config.rs  error.rs  lib.rs  main.rs  reg_ex.rs
src/tests/: teste_cte01.xml  teste_cte02.xml  teste_cte03.xml
